# infmax-mds-ltm-mln

./: .gitignore  README.md  analysis.ipynb  example_config.yaml  params.py  plot_mds.py  produce_comparison.py  pyproject.toml  run_experiments.py  test_reproducibility.py  visualise.ipynb  visualise_mds.py  visualise_results.ipynb
.dvc/: config
_configs/: example_classic.yaml
_test_data/: results--ver-1959_1.csv  results--ver-1995_1.csv  results--ver-1995_2.csv  results--ver-1995_3.csv
analysis/: mds_vs_ranking_average.py  per_round_average.ipynb
data/: experiment_setup.dvc  get_raw_results_slim.sh  zip_raw_results_slim.sh
data/brute_ds/: .gitignore  l2_course_net_1.dvc  toy_network.dvc
data/processed_results/: .gitignore  distributions.pdf.dvc  expositions.pdf.dvc  g_vs_li_mds.csv.dvc  heatmaps.pdf.dvc  heatmaps_aggregated.pdf.dvc  metrics.pdf.dvc  profile_reports.dvc  quantitative_comparison.csv.dvc  similarities.csv.dvc  similarities_mds.csv.dvc  similarities_seeds_and.csv.dvc  similarities_seeds_or.csv.dvc  used_mds.csv.dvc  visualisations_mds.dvc
data/processed_results_2nd/: .gitignore  quantitative_comparison.csv.dvc
data/raw_results/: .gitignore  expositions.pdf.dvc  similarities.csv.dvc  (+1 more)
env/: conda.yaml  requirements.txt
runners/: commons.py  greedy_runner.py  main_runner.py  new_selectors.py  params_handler.py  result_handler.py  simulation_step.py  step_classic.py  utils.py
src/: brute_ds.py  generate_networks.py  main.py  network_generator.py  new_selectors.py  params_handler.py  real_mds.py  result_handler.py  utils.py  visualisation.py
(+950 files in other folders)
