[build-system]
requires = ["setuptools~=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.0.1"
description = "Inf. Max. with Minimal Dominating Set under LTM for Multilayer Networks"
authors = [
    {name = "Michał Czuba", email="michal.czuba@pwr.edu.pl"},
    {name = "Mingshan Jia", email="Mingshan.Jia@uts.edu.au"},
    {name = "Kaska Musial-Gabrys", email="Katarzyna.Musial-Gabrys@uts.edu.au"},
    {name = "Piotr Bródka", email="piotr.brodka@pwr.edu.pl"},
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["env/requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["*tests*"]
